add refill-successful empty

--- a/src/app/balance/refill-money/refill-money.component.html
+++ b/src/app/balance/refill-money/refill-money.component.html
@@ -10,7 +10,7 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">1</span>/2</div>
+        <span class="steps__counter-val">1</span>/3</div>
       <div class="modal__header-mob-controls">
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
@@ -30,28 +30,28 @@
             <span class="steps__title">Refill money</span>
           </a>
         </li>
-        <li class="steps__item steps__item--current">
+        <li class="steps__item">
           <a class="steps__link">
-            <span class="steps__number steps__number--current">2</span>
+            <span class="steps__number steps__number--valid">2</span>
             <span class="steps__number-mob-current">2. Crypto deposit</span>
             <span class="steps__title">Crypto deposit</span>
           </a>
         </li>
-        <!--<li class="steps__item">-->
-          <!--<a class="steps__link">-->
-            <!--<span class="steps__number">3</span>-->
-            <!--<span class="steps__number-mob-current">3. Request was created!</span>-->
-            <!--<span class="steps__title">Request was created!</span>-->
-          <!--</a>-->
-        <!--</li>-->
+        <li class="steps__item steps__item--current">
+          <a class="steps__link">
+            <span class="steps__number steps__number--current">3</span>
+            <span class="steps__number-mob-current">3. Accepted</span>
+            <span class="steps__title">Accepted</span>
+          </a>
+        </li>
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">1</span>/ 2</div>
+      <div class="steps__counter">step <span class="steps__counter-val">1</span>/ 3</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content">
       <!--<app-refill-step-one></app-refill-step-one>-->
-      <app-refill-step-two></app-refill-step-two>
-
+      <!--<app-refill-step-two></app-refill-step-two>-->
+      <app-refill-successful></app-refill-successful>
     </div>
   </div>
 </div>
