add text in successful popups

--- a/src/app/balance/refill-money/refill-successful/refill-successful.component.html
+++ b/src/app/balance/refill-money/refill-successful/refill-successful.component.html
@@ -8,12 +8,12 @@
     </svg>
   </div>
   <div class="title refill__successful-title">Congratulations!</div>
-  <!--<div class="subtitle refill__successful-subtitle">-->
-  <!--Please go to <a href="#" class="link">Сотовый мир</a> to make a payment <b>11 USD</b>-->
-  <!--</div>-->
-  <!--<div class="subtitle refill__successful-subtitle">-->
-  <!--You can track the progress in history section on <a href="#" class="link">funds</a> page-->
-  <!--</div>-->
+  <div class="subtitle refill__successful-subtitle">
+  Please go to <a href="#" class="link">Сотовый мир</a> to make a payment <b>11 USD</b>
+  </div>
+  <div class="subtitle refill__successful-subtitle">
+    You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page
+  </div>
   <button class="btn btn--center btn--empty-blue">Ok</button>
 
 </div>
