--- a/src/app/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/balance/send-money/send-successful/send-successful.component.html
@@ -7,13 +7,44 @@
         fill="#237BEF"/>
     </svg>
   </div>
-  <div class="title send__successful-title">Congratulations!</div>
+  <!--send crypto/fiat start-->
+
+  <!--<div class="title send__successful-title">Request was created!</div>-->
   <!--<div class="subtitle send__successful-subtitle">-->
-    <!--Please go to <a href="#" class="link">Сотовый мир</a> to make a payment <b>11 USD</b>-->
+    <!--You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page.-->
   <!--</div>-->
+
+  <!--send crypto/fiat end-->
+  <!--send instant-transfer start-->
+
+  <!--<div class="title send__successful-title">Funds were sent!</div>-->
   <!--<div class="subtitle send__successful-subtitle">-->
-    <!--You can track the progress in history section on <a href="#" class="link">funds</a> page-->
+    <!--You can check the status of completed transfer in the <a href="#" class="link">Transaction history</a> table.-->
   <!--</div>-->
+
+  <!--send instant-transfer end-->
+  <!--send protected email-code-transfer start-->
+
+  <div class="title send__successful-title">Private code was created successfully!</div>
+  <div class="send__code">
+    <b>123456</b>
+    <button class="btn btn--small btn--center">Copy</button>
+  </div>
+  <div class="subtitle send__successful-subtitle">
+    You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page.
+  </div>
+
+  <!--send protected email-code-transfer end-->
+  <!--send protected code-transfer start-->
+
+  <!--<div class="title send__successful-title">Code was created successfully!</div>-->
+  <!--<div class="subtitle send__successful-subtitle">-->
+    <!--You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page.-->
+  <!--</div>-->
+
+  <!--send protected code-transfer end-->
+
+
   <button class="btn btn--center btn--empty-blue">Ok</button>
 
 </div>
