--- a/src/app/balance/refill-money/refill-successful/refill-successful.component.scss
+++ b/src/app/balance/refill-money/refill-successful/refill-successful.component.scss
@@ -31,6 +31,9 @@
     }
   }
 }
+.btn{
+  margin-top: 8px;
+}
 
 @media (min-width: 1200px) {
   .refill {
@@ -41,5 +44,8 @@
       text-align: center;
       margin-bottom: 16px;
     }
+  }
+  .btn{
+    margin-top: 16px;
   }
 }
