--- a/src/app/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/balance/send-money/send-successful/send-successful.component.html
@@ -26,18 +26,25 @@
   <!--send protected email-code-transfer start-->
 
   <div class="title send__successful-title">Private code was created successfully!</div>
-  <div class="send__code">
-    <b>123456</b>
-    <button class="btn btn--small btn--center">Copy</button>
+  <div class="send__code-wrap">
+    <div class="send__code-title">Use this code to get the transfer</div>
+    <div class="send__code">01d098ddce5b467c1987eee435a8457bd7a4e95ad1bc30213e1c6525250527c7</div>
+    <button class="btn btn--small btn--center btn--empty-blue">Copy</button>
   </div>
   <div class="subtitle send__successful-subtitle">
     You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page.
   </div>
 
+
   <!--send protected email-code-transfer end-->
   <!--send protected code-transfer start-->
 
   <!--<div class="title send__successful-title">Code was created successfully!</div>-->
+  <!--<div class="send__code-wrap">-->
+    <!--<div class="send__code-title">Use this code to get the transfer</div>-->
+    <!--<div class="send__code">01d098ddce5b467c1987eee435a8457bd7a4e95ad1bc30213e1c6525250527c7</div>-->
+    <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;center btn&#45;&#45;empty-blue">Copy</button>-->
+  <!--</div>-->
   <!--<div class="subtitle send__successful-subtitle">-->
     <!--You can track the progress in Pending requests table on <a href="#" class="link">Funds</a> page.-->
   <!--</div>-->
