--- a/src/app/balance/send-money/send-successful/send-successful.component.scss
+++ b/src/app/balance/send-money/send-successful/send-successful.component.scss
@@ -1,10 +1,10 @@
 .send {
   &__successful{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    //width: 100%;
+    //height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,17 +30,32 @@
       text-decoration:underline;
     }
   }
-  &__code{
+  &__code-wrap{
     display: flex;
     flex-direction: column;
     align-items: center;
-    b{
-      flex-grow: 0;
-    }
+    justify-content: center;
+    margin-bottom: 16px;
     .btn{
       flex-grow: 0;
-      margin-top: 8px;
+      margin: 0;
     }
+  }
+  &__code-title{
+    font-size: 14px;
+    line-height: 16px;
+    color:#A0A0A0;
+    margin-bottom: 12px;
+  }
+  &__code{
+    width: 100%;
+    max-width: 370px;
+    margin-bottom: 12px;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: bold;
+    text-align: center;
+    word-wrap: break-word;
   }
 }
 .btn{
