--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -55,7 +55,7 @@
     &__item {
       position: relative;
       z-index: 1;
-      height: 100%;
+      //height: 100%;
       display: -webkit-flex;
       display: -ms-flex;
       display: flex;
@@ -82,7 +82,8 @@
       padding: 0 10px;
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
-      @media (min-width: 1400px) {
+      @media (min-width: 1200px) {
+        height: auto;
         padding: 0 16px;
       }
 
@@ -172,7 +173,7 @@
     height: 0;
     overflow: hidden;
     position: absolute;
-    top: 50px;
+    top: 16px;
     left: 16px;
     z-index: 4;
     background-color: #2E304D;
