--- a/src/app/dashboard/components/chat/chat-message/chat-message.component.html
+++ b/src/app/dashboard/components/chat/chat-message/chat-message.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="widget__message">
     <div class="widget__message-nickname">{{ message.email | nickname}}</div>
-    <div class="widget__message-reply" *ngIf="message.messageReplyText">
+    <div class="widget__message-reply" *ngIf="message.messageReplyText && message.messageReplyText !== 'text_reply'">
       <div class="widget__message-nickname">{{ message.messageReplyUsername }}</div>
       <p class="widget__message-text">{{ message.messageReplyText}}</p>
     </div>
