--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -95,6 +95,11 @@
       label {
         color: #EB5757 !important;
       }
+      input:focus {
+        &+label{
+          color: #94C2FF !important;
+        }
+      }
     }
   }
 }
