--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,5 +1,7 @@
-<div class="title send__title">Make Crypto Withdrawal in <span>BTC</span></div>
-<div class="send__inputs-wrap">
+<div class="title send__title">Make Crypto Withdrawal in <span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
+<div class="formWraper">
+<form [formGroup]="form" >
+<div class="send__inputs-wrap" *ngIf="activeCrypto">
   <div class="select send__select">
     <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
       <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
@@ -36,58 +38,76 @@
       </div>
     </div>
   </div>
-  <div class="wrap-input wrap-input--error send__wrap-input">
-    <div class="avaliable">Avaliable: <a href="#" class="link">123 BTC</a></div>
-    <input class="wrap-input__input" required>
-    <label class="wrap-input__label">Amount</label>
-    <div class="wrap-input__line"></div>
+  <div class="wrap-input send__wrap-input"
+       [ngClass]="{'wrap-input--error': !form.controls['amount'].valid && isSubmited}">
+    <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeCrypto.name}}</a></div>
+    <app-price-input  [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
     <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show">Day limit for withdrawal is 30 000 USD</span>
+    <span class="wrap-input__message wrap-input__message--show" *ngIf="!form.controls['amount'].valid && isSubmited"
+    >Day limit for withdrawal is {{minWithdrawSum}} {{activeCrypto.name}}</span>
     <!--Input error section ends-->
   </div>
 </div>
 <div class="send__inputs-wrap">
-  <div class="wrap-input wrap-input--error send__wrap-input">
-    <input class="wrap-input__input" required>
+  <div class="wrap-input  send__wrap-input"
+  [ngClass]="{'wrap-input--error': !form.controls['address'].valid && isSubmited}">
+    <input class="wrap-input__input" name="address" formControlName="address">
     <label class="wrap-input__label">Address for withdraw money</label>
     <div class="wrap-input__line"></div>
     <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show">You should enter BTC address for withdrawal</span>
+    <span class="wrap-input__message wrap-input__message--show"
+          *ngIf="!form.controls['address'].valid && isSubmited"
+    >You should enter {{activeCrypto.name}} address for withdrawal</span>
     <!--Input error section ends-->
   </div>
-  <div class="wrap-input send__wrap-input">
-    <input class="wrap-input__input" required>
+  <div class="wrap-input send__wrap-input"
+       *ngIf="isMemo"
+       [ngClass]="{'wrap-input--error': !form.controls['memo'].valid && isSubmited}"
+  >
+    <input class="wrap-input__input" name="memo" formControlName="memo">
     <label class="wrap-input__label">Memo ID</label>
     <div class="wrap-input__line"></div>
     <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show">Enter memo ID</span>
+    <span class="wrap-input__message wrap-input__message--show"
+          *ngIf="!form.controls['memo'].valid && isSubmited"
+    >Enter memo ID</span>
     <!--Input error section ends-->
   </div>
 </div>
+</form>
 <div class="send__line"></div>
 <div class="send__info">
   <div class="send__info-row">
     <div class="send__info-title">You want to withdraw:</div>
-    <div class="send__info-value">0 BTC</div>
+    <div class="send__info-value">{{calculateData.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Exchange comission:</div>
-    <div class="send__info-value">12% = 0 BTC</div>
+    <div class="send__info-value">12% = 0 {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Merchant comission:</div>
-    <div class="send__info-value">12% = 0.000005 BTC <span class="send__merchant-comission">(but not less than 0.000005)</span></div>
+    <div class="send__info-value">{{calculateData.percentMerchant}}% = {{calculateData.merchantSum}} {{activeCrypto ? activeCrypto.name : ''}} <span class="send__merchant-comission">(but not less than {{calculateData.fixedMinCommissiom}})</span></div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Total comission:</div>
-    <div class="send__info-value">24% = 0.000005 BTC</div>
+    <div class="send__info-value">{{calculateData.totalCommission}}% = 0.000005 {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Total with comission:</div>
-    <div class="send__info-value">0.000005 BTC</div>
+    <div class="send__info-value">{{calculateData.amountWithCommission }} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
 </div>
-<button class="btn btn--center btn--empty-blue">Withdraw <span class="value">123.000000</span> <span> BTC</span></button>
+<button class="btn btn--center  "
+        [ngClass]="{
+        'btn--empty-blue': !form.valid && !isSubmited,
+        'btn--error': !form.valid && isSubmited
+        }"
+        (click)="onSubmitWithdrawal()"
+>Withdraw
+  <span class="value">{{calculateData.amountWithCommission}}</span>
+  <span> {{activeCrypto ? activeCrypto.name : ''}}</span>
+</button>
 <div class="send__line"></div>
 <div class="note modal__note">
   <div class="note__title">Please note:</div>
@@ -97,4 +117,5 @@
     <li class="note__list-item">Do not withdraw directly to a crowdfund or ICO. We will not credit your account with tokens from that sale.
     </li>
   </ul>
+</div>
 </div>
