--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -126,3 +126,31 @@
 perfect-scrollbar{
   height: 160px;
 }
+
+::ng-deep div.wrap-input.send__wrap-input {
+  .wrap-input__message{
+    color: #EB5757 !important;
+  }
+  app-price-input {
+    label {
+      background: #191A39 !important;
+    }
+  }
+  &.wrap-input--error {
+    app-price-input {
+      label {
+        color: #EB5757 !important;
+      }
+      input:focus {
+        &+label{
+          color: #94C2FF !important;
+        }
+      }
+    }
+  }
+}
+
+.btn-active {
+  background-color: #237BEF;
+  color: #fff;
+}
