--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -1,27 +1,21 @@
 <div class="title send__title">Make Fiat Withdrawal in <span>USD</span></div>
 <div class="send__inputs-wrap">
-  <div class="select send__select send__select--custom">
-    <div class="select__value select__value--active">
-      <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-      USD
+  <div class="select send__select send__select--custom" >
+    <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
+      <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+      {{activeFiat.name}}
     </div>
     <div class="select__label">Currency</div>
     <div class="select__line"></div>
     <div class="select__triangle"></div>
     <!--add select__list--open for looking open state-->
-    <ul class="select__list">
-      <li class="select__list-item">
-        <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-        USD
+    <ul class="select__list" *ngIf="openCurrencyDropdown">
+
+      <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
+        <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+        {{currency.name}}
       </li>
-      <li class="select__list-item">
-        <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-        IDR
-      </li>
-      <li class="select__list-item">
-        <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-        UAH
-      </li>
+
     </ul>
   </div>
   <div class="wrap-input wrap-input--error send__wrap-input">
@@ -36,7 +30,9 @@
 </div>
 <div class="send__inputs-wrap">
   <div class="select send__select">
-    <div class="select__value select__value--active">
+    <div class="select__value select__value--active"
+         (click)="togglePaymentSystemDropdown()"
+    >
       <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
       Сотовый мир
     </div>
@@ -44,9 +40,9 @@
     <div class="select__line"></div>
     <div class="select__triangle"></div>
     <!--add select__list-searching--open for looking open state-->
-    <div class="select__list-searching">
+    <div class="select__list-searching" *ngIf="openPaymentSystemDropdown">
       <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" required>
+        <input class="select__search-input" type="text" placeholder="Search" (input)="searchMerchant($event)">
         <div class="select__search-icon">
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -55,18 +51,15 @@
         </div>
       </div>
       <ul class="select__list select__list--open">
-        <li class="select__list-item">
-          <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-          Payeer
+
+        <li class="select__list-item"
+            *ngFor="let merchant of merchants"
+            (click)="selectMerchant(merchant)"
+        >
+          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          {{merchant.name}}
         </li>
-        <li class="select__list-item">
-          <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-          Сотовый мир
-        </li>
-        <li class="select__list-item">
-          <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-          Swift/SEPA
-        </li>
+
       </ul>
     </div>
   </div>
