fix graph in mob, pair-search in mob

--- a/src/app/dashboard/components/graph/graph.component.scss
+++ b/src/app/dashboard/components/graph/graph.component.scss
@@ -27,11 +27,11 @@
 
  }
 
-@media (max-width: 1200px) {
-  ::ng-deep .pair-popup__top {
-    margin-top: 0 !important;
-  }
-}
+//@media (max-width: 1200px) {
+//  ::ng-deep .pair-popup__top {
+//    margin-top: 0 !important;
+//  }
+//}
 
 .currency-search-container {
   background: #191A39;
