--- a/src/app/dashboard/components/trade-history/trade-history.component.html
+++ b/src/app/dashboard/components/trade-history/trade-history.component.html
@@ -219,7 +219,7 @@
   <div class="widget__content widget__content--mob">
     <!--table mob start-->
     <!--<perfect-scrollbar style="max-width: 600px; height: calc(100vh - 105px);" [config]="config">-->
-    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 105px);">
+    <perfect-scrollbar style="height: calc(100vh - 105px);">
       <table class="table widget__table widget__table--mob">
         <thead>
           <tr>
