fix showing fav in markets mob

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -282,7 +282,7 @@
       </button>
       <button class="tabs__item"
               [ngClass]="{'tabs__item--active': currencyDisplayMode === 'Favorites','tab-no-active': currencyDisplayMode !== 'Favorites'}"
-              (click)="selectedTab('FAVOURITE')"
+              (click)="selectedTab('Favorites')"
       >
         <span>
           <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
