--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         <!-- <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a> -->
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" routerLink="balance" routerLinkActive="menu__link--active"><span class="menu__link-text">Balance</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="/funds/balance" routerLinkActive="menu__link--active"><span class="menu__link-text">Balance</span></a></li>
             <li class="submenu__item"><a class="submenu__link" routerLink="transaction-history" routerLinkActive="menu__link--active"><span class="menu__link-text">Transaction history</span></a></li>
           </ul>
         </div>
