--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -204,7 +204,7 @@
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
-        <button (click)="onFilterOrders()">
+        <button class="btn btn--auto btn--empty-blue" (click)="onFilterOrders()">
           Search
         </button>
       </div>
@@ -274,9 +274,6 @@
           <td class="table__cell table__cell--tac" colspan="10">
             No matching records found
           </td>
-          <!--<div class="empty-data">-->
-            <!---->
-          <!--</div>-->
         </tr>
       </tbody>
     </table>
