--- a/src/app/orders/orders-history/orders-history.component.scss
+++ b/src/app/orders/orders-history/orders-history.component.scss
@@ -1,179 +1,226 @@
-
-.ng-select.custom {
-  color: white;
-  border:0px;
-  min-height: 0px;
-  border-radius: 0;
-}
-.ng-select.custom .ng-select-container  {            
-  min-height: 0px;
-  border-radius: 0;
-}
-.table {
-    margin-top: 16px;
-    th {
-      padding: 0 8px 12px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
-      }
-    }
-    td {
-      padding: 8px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
-      }
-    }
+::ng-deep .ng-select {
+  .ng-select-container {
+    width: calc(100% - 5px) !important;
+    margin: 0 auto !important;
+    height: 45px !important;
+    background-color: transparent !important;
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    border-color: #94C2FF !important;
+    border-bottom: none !important;
+    overflow: unset !important;
   }
-
-  .paginator {
+  .ng-value-container {
+    height: 100% !important;
+  }
+  .ng-has-value .ng-placeholder{
+    display: block !important;
+  }
+  .ng-placeholder {
     position: absolute;
-    right: 16px;
-    // bottom: 12px;
-  }
-
-  a.active {
-    background-color: #237BEF !important;
-    cursor: pointer;
-  }
-
-  ::ng-deep .ngx-pagination {
-    margin-bottom: 0 !important;
-    display: flex;
-  }
-
-  ::ng-deep .ngx-pagination li {
-    width: 28px;
-    height: 28px;
-    margin-right: 8px !important;
-    padding: 0;
-    &.current {
-      display: flex !important;
-      align-items: center !important;
-      justify-content: center !important;
-      background-color: #237BEF !important;
-      padding: 0 !important;
-      border-radius: 4px !important;
-    }
-    &.pagination-previous.disabled {
-      display: flex !important;
-      align-items: center;
-      justify-content: center;
-      padding: 0 !important;
-      &:before {
-        display: none;
-      }
-      span {
-        display: none;
-      }
-    }
-    &.pagination-next.disabled {
-      display: flex !important;
-      align-items: center;
-      justify-content: center;
-      padding: 0 !important;
-      &:after {
-        display: none;
-      }
-      span {
-        display: none;
-      }
-    }
-    &:hover {
-      position: relative;
-      bottom: 2px;
-    }
-  }
-
-  ::ng-deep .ngx-pagination a {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-    width: 100%;
-    height: 100%;
-    padding: 0 !important;
-    font-size: 14px;
-    line-height: 16px;
-    //border: 1px solid #237BEF;
-    border-radius: 4px !important;
-    color: #fff !important;
-    background-color: rgba(255, 255, 255, 0.1) !important;
-    border-color: transparent;
-    &:hover {
-      background-color: #237BEF !important;
-    }
-  }
-
-  ::ng-deep li.pagination-next a {
-    &:after {
-      content: url('../../../assets/img/paginator-next.svg') !important;
-      margin-left: 0 !important;
-      display: block;
-      width: 13px;
-      height: 13px;
-    }
-  }
-
-  ::ng-deep li.pagination-previous a {
-    &:before {
-      content: url('../../../assets/img/paginator-prev.svg') !important;
-      margin-right: 0 !important;
-      display: block;
-      width: 13px;
-      height: 13px;
-    }
-  }
-
-  .table__details {
-    height: 0;
-    transition: 0.4s;
-    display: none;
-
-    &-show {
-      display: table-row;
-      height: auto;
-    }
-    td {
-      height: 0;
-      transition: 0.4s;
-    }
-  }
-
-  .select-input_label {
-    top: -5px;
+    top: -7px;
+    left: 7px;
     padding: 0 2px;
     font-size: 10px;
     line-height: 12px;
     z-index: 100;
     background-color: #191A39;
+    color: #94C2FF !important;
   }
-
-  .show-filter-popup {
-    display: block !important;
+  .ng-value{
+    color: #fff !important;
   }
-
-    // search dropdown
-
-    .orders__search {
-      .search-results {
-        left: 160px;
-        .dropdown__list {
-          max-height: 170px;
-          overflow-x: unset;
-          overflow-y: scroll;
-        }
-      }
-
-      &:hover {
-        .search-results {
-          .dropdown__list {
-            display: block;
-          }
-        }
-      }
+  .ng-input {
+    height: 100%;
+    top: 0 !important;
+    input {
+      height: 100%;
+      color: #fff !important;
+      font-size: 14px !important;
+      font-family: inherit;
     }
+  }
+  .ng-arrow {
+    border-color: #94C2FF transparent transparent !important;
+  }
+  &.ng-select-opened > .ng-select-container .ng-arrow {
+    border-color: transparent transparent #94C2FF !important;
+  }
+  .ng-dropdown-panel{
+    border-color: #94C2FF;
+    background-color: #191A39;
+    margin-bottom: 0 !important;
+  }
+  .ng-option{
+    background-color: transparent !important;
+    color: #fff !important;
+    &-marked{
+      background-color: rgba(255,255,255,.1) !important;
+    }
+  }
+  .ng-clear-wrapper{
+    width: 10px !important;
+  }
+  .ng-clear{
+    content: '' !important;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 0 auto;
+    font-size: 0 !important;
+    vertical-align: middle;
+    background-image: url("assets/img/close-light-blue.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
+//.table {
+//  margin-top: 16px;
+//  th {
+//    padding: 0 8px 12px;
+//    &:first-child {
+//      padding-left: 16px;
+//    }
+//    &:last-child {
+//      padding-right: 16px;
+//    }
+//  }
+//  td {
+//    padding: 8px;
+//    &:first-child {
+//      padding-left: 16px;
+//    }
+//    &:last-child {
+//      padding-right: 16px;
+//    }
+//  }
+//}
+//
+//.paginator {
+//  position: absolute;
+//  right: 16px;
+//  // bottom: 12px;
+//}
+
+a.active {
+  background-color: #237BEF !important;
+  cursor: pointer;
+}
+
+::ng-deep .ngx-pagination {
+  margin-bottom: 0 !important;
+  display: flex;
+}
+
+::ng-deep .ngx-pagination li {
+  width: 28px;
+  height: 28px;
+  margin-right: 8px !important;
+  padding: 0;
+  &.current {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    background-color: #237BEF !important;
+    padding: 0 !important;
+    border-radius: 4px !important;
+  }
+  &.pagination-previous.disabled {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    padding: 0 !important;
+    &:before {
+      display: none;
+    }
+    span {
+      display: none;
+    }
+  }
+  &.pagination-next.disabled {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    padding: 0 !important;
+    &:after {
+      display: none;
+    }
+    span {
+      display: none;
+    }
+  }
+  &:hover {
+    position: relative;
+    bottom: 2px;
+  }
+}
+
+::ng-deep .ngx-pagination a {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100%;
+  height: 100%;
+  padding: 0 !important;
+  font-size: 14px;
+  line-height: 16px;
+  //border: 1px solid #237BEF;
+  border-radius: 4px !important;
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  border-color: transparent;
+  &:hover {
+    background-color: #237BEF !important;
+  }
+}
+
+::ng-deep li.pagination-next a {
+  &:after {
+    content: url('../../../assets/img/paginator-next.svg') !important;
+    margin-left: 0 !important;
+    display: block;
+    width: 13px;
+    height: 13px;
+  }
+}
+
+::ng-deep li.pagination-previous a {
+  &:before {
+    content: url('../../../assets/img/paginator-prev.svg') !important;
+    margin-right: 0 !important;
+    display: block;
+    width: 13px;
+    height: 13px;
+  }
+}
+
+.table__details {
+  height: 0;
+  transition: 0.4s;
+  display: none;
+
+  &-show {
+    display: table-row;
+    height: auto;
+  }
+  td {
+    height: 0;
+    transition: 0.4s;
+  }
+}
+
+.select-input_label {
+  top: -5px;
+  padding: 0 2px;
+  font-size: 10px;
+  line-height: 12px;
+  z-index: 100;
+  background-color: #191A39;
+}
+
+.show-filter-popup {
+  display: block !important;
+}
+
