--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -118,11 +118,13 @@
         <!--</div>-->
       </div>
       <div class="separator">
-        <span  [ngClass]="{'color-red': !isExratePositive, 'color-green': isExratePositive}">{{!+lastExrate ? 0 : +lastExrate | replaceNumber}}</span>
+        <span  [ngClass]="{'color-red': !isExratePositive, 'color-green': isExratePositive}">
+          {{!+lastExrate ? 0 : +lastExrate | replaceNumber: isFiat(activeCurrencyPair.market)}}
+        </span>
         <img *ngIf="+preLastExrate < +lastExrate" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
         <img *ngIf="+preLastExrate > +lastExrate" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
-        <span >{{!+preLastExrate ? 0 : +preLastExrate | number:'1.1-8' | replaceNumber}}</span>
+        <span >{{!+preLastExrate ? 0 : +preLastExrate | replaceNumber: isFiat(activeCurrencyPair.market)}}</span>
       </div>
 
       <!--<div class="separator" *ngIf="lastOrder">-->
