--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -73,6 +73,10 @@
             </td>
           </tr>
         </ng-container>
+
+        <tr class="table__row--mob" colspan="4" *ngIf="!(orderItems$ | async).length">
+            No matching records found
+          </tr>
         <!-- t-row end-->
       </tbody>
     </table>
