--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -74,9 +74,11 @@
           </tr>
         </ng-container>
 
-        <tr class="table__row--mob" colspan="4" *ngIf="!(orderItems$ | async).length">
+        <tr class="table__row--mob"  *ngIf="!(orderItems$ | async).length">
+          <td class="table__cell table__cell--tac" colspan="4">
             No matching records found
-          </tr>
+          </td>
+        </tr>
         <!-- t-row end-->
       </tbody>
     </table>
