--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -845,21 +845,21 @@
         <div class="tabs balance__tabs">
           <button 
             class="tabs__item" 
-            [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO, 'border-transparent': currTab !== Tab.PR}"
+            [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
             (click)="onSelectTab(Tab.CRYPTO)"  
           >
             Crypto Balances
           </button>
           <button 
             class="tabs__item" 
-            [ngClass]="{'tabs__item--active': currTab === Tab.FIAT, 'border-transparent': currTab !== Tab.PR}"
+            [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
             (click)="onSelectTab(Tab.FIAT)"  
           >
             Fiat Balances
           </button>
           <button 
             class="tabs__item" 
-            [ngClass]="{'tabs__item--active': currTab === Tab.PR, 'border-transparent': currTab !== Tab.PR}"
+            [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
             (click)="onSelectTab(Tab.PR)"  
           >
             <span>Pending requests</span>
